[gd_scene load_steps=7 format=1]

[ext_resource path="res://Enemies/enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Player/thrust_particle.png" type="Texture" id=3]
[ext_resource path="res://Weapons/weapon_enemy.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 50, 50 )

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.666667 )
colors = ColorArray( 0.870588, 0.807843, 0.611765, 1, 0.180392, 0.47451, 0.729412, 1 )

[node name="Enemy" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }
speed = 100
life = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/rot = -90.0
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]

transform/scale = Vector2( 0.01, 0.01 )
config/amount = 32
config/lifetime = 2.0
config/preprocess = 0.2
config/emitting = false
config/local_space = false
config/explosiveness = 0.2
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 10.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.3
params/final_size = 0.6
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="Weapon" parent="." instance=ExtResource( 4 )]

[node name="AI" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="death" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_shoot_timeout"]

[connection signal="timeout" from="AI" to="." method="_on_AI_timeout"]

[connection signal="timeout" from="death" to="." method="_on_death_timeout"]


